# tencent-ima-copilot-mcp

./: .env.example  .gitignore  AGENTS.md  AGENTS.md.bak  Dockerfile  README.md  apply_llama.py  debug_similarity.py  docker-compose.yml  ima_server_simple.py  pyproject.toml  requirements.txt  test_ask.py  test_sync.py
src/: config.py  ima_client.py  models.py
