[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tencent-ima-copilot-mcp"
version = "0.1.0"
description = "MCP server for Tencent IMA Copilot functionality"
authors = [
    {name = "IMA MCP Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "fastmcp>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "pydantic-settings>=2.1.0",
    "sse-starlette>=1.6.0",
    "loguru>=0.7.3",
    "tenacity>=9.1.4",
]


[project.scripts]
ima-mcp = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true


